tests/integration/tests/examples/check-commands/CHECK-NOT/Failure/CHECK-NOT.itest
; RUN: printf "String3" | (%FILECHECK_EXEC %S/CHECK-NOT.check 2>&1; test $? = 1;) | %FILECHECK_EXEC %s
; CHECK: {{.*}}CHECK-NOT.check:3:12: error: CHECK-NOT: excluded string found in input
; CHECK: CHECK-NOT: String3
; CHECK:            ^
; CHECK: <stdin>:1:1: note: found here
; CHECK: String3
; CHECK: ^~~~~~~
; CHECK-EMPTY:
